# rust_example_design_patterns

./: Cargo.toml  Dockerfile  Makefile  README.md  SPEC.md  ai.txt  llms-full.txt
k8s/: deployment.yaml
src/: padroes.rs
