[package]
name = "rust_example_design_patterns"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
description = "Demonstracao de padroes de projeto isolando regras de negocio da infraestrutura."
authors = ["Engineering Team <engineering@example.com>"]
license = "MIT"
repository = "https://git.example.com/rust-example-design-patterns"
keywords = ["reference", "example"]
readme = "README.md"

[dependencies]
