[package]
name = "rust_example_design_patterns"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
description = "Demonstration of design patterns isolating business rules from infrastructure."
authors = ["Engineering Team <engineering@example.com>"]
license = "MIT"
repository = "https://git.example.com/rust-example-design-patterns"
keywords = ["reference", "example"]
readme = "README.md"

[dependencies]
